ozone: Disable HW overlays on non-eDP connectors.

HW overlays on a non embedded displays are behaving incorrectly.

Bug: 709105
Change-Id: I024290375d2f3d051e75b81dba0acaa34d95cf59